# nist_dehum

./: .gitignore  README.md  board.py  drip.py  drip_test.py  hx711_test.py  hx711prod.py  main.py  nau7802.py  nau7802_calibrate.py  nau_calibrate.csv  notes.txt  offset_calculator.py  pyproject.toml  pzem_test.py  requirements.txt  serial_test.py  si702_test.py
logs/: 2025-06-17_15:31:07.535535_ttyS0.csv
tests/: hx711calibrate.py  nau7802_calibrate.py  pzem_j.py  pzem_logger.py
